--- a/src/components/Estimation & Management/About/About.module.css
+++ b/src/components/Estimation & Management/About/About.module.css
@@ -1,55 +1,52 @@
-.parent{
-    display:flex;
-    width:100%;
-    height:100%;
-    align-items: center;
-    justify-content: center;
+.parent {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
-.img{
-    width: 100%;
-    background-position:center;
-    background-repeat: no-repeat;
-    background-size:cover;
-    height: 788px;
-    position:relative;
+.img {
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 788px;
+  position: relative;
 }
 
-.child{
-    padding:0 200px;
-    font: normal normal normal 34px/60px Poppins;
-    letter-spacing: 0px;
-    color: #F1F1F1;
-    text-align:Justify;
-    
+.child {
+  padding: 0 200px;
+  font: normal normal normal 34px/60px Poppins;
+  font-family: 'Cabin', sans-serif;
+  letter-spacing: 0px;
+  color: #f1f1f1;
+  text-align: Justify;
 }
 
-@media(max-width: 1100px){
-    .child{
-        padding:0 100px;
-        font: normal normal normal 24px/45px Poppins;
-       
-    }
-    .img{
-        height: 700px;
-     }
+@media (max-width: 1100px) {
+  .child {
+    padding: 0 100px;
+    font: normal normal normal 24px/45px Poppins;
+  }
+  .img {
+    height: 700px;
+  }
 }
 
-@media(max-width: 589px){
-    .child{
-        padding:0 50px;
-        font: normal normal normal 20px/35px Poppins;
-       
-    }
+@media (max-width: 589px) {
+  .child {
+    padding: 0 50px;
+    font: normal normal normal 20px/35px Poppins;
+  }
 }
 
-@media(max-width: 373px){
-    .child{
-        padding:0 25px;
-        font: normal normal normal 15px/25px Poppins;
-       
-    }
-    .img{
-        height: 500px;
-     }
+@media (max-width: 373px) {
+  .child {
+    padding: 0 25px;
+    font: normal normal normal 15px/25px Poppins;
+  }
+  .img {
+    height: 500px;
+  }
 }
