--- a/src/components/Estimation & Management/Service/UpperSection.module.css
+++ b/src/components/Estimation & Management/Service/UpperSection.module.css
@@ -1,6 +1,8 @@
 .section {
   display: flex;
   padding: 25px;
+  align-items: center;
+  column-gap: 15px;
 }
 
 .leftSection {
@@ -10,6 +12,7 @@
   justify-content: space-evenly;
   row-gap: 50px;
   height: 80%;
+  column-gap: 15px;
 }
 
 .leftSection .card {
@@ -18,8 +21,8 @@
   justify-content: center;
   align-items: center;
   width: 250px;
-  height: 100px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  height: 125px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
 
 .leftSection .card .icons {
