--- a/src/pages/Estimation & Management/EstimationManagementProject.module.css
+++ b/src/pages/Estimation & Management/EstimationManagementProject.module.css
@@ -56,7 +56,55 @@
 .maindisptexth2 {
   font-size: 3vh;
 }
+.sliders {
+  padding: 6vh;
+}
 
+.boxmain {
+  display: flex;
+  padding: 10vh 15vh;
+  flex-direction: row;
+  justify-content: space-around;
+  color: #ffffff;
+  width: 100%;
+  height: 50vh;
+  background: #191d19 0% 0% no-repeat padding-box;
+  overflow-y: hidden;
+}
+
+.box2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.box3 {
+  display: flex;
+  flex-direction: row;
+}
+
+.box4 {
+  border-radius: 2vh;
+  border: 5px solid white;
+  padding: 17px;
+  margin: auto;
+  text-align: center;
+}
+.boxdata {
+  margin-left: 2vh;
+  width: 30vh;
+}
+
+.boxdata1 {
+  margin-left: 2vh;
+  width: 20vh;
+}
+.boxfont1 {
+  font-size: 30px;
+}
+.boxfont2 {
+  font-size: 20px;
+}
 @media (max-width: 1550px) {
   .maindisp {
     height: 50vh;
@@ -74,10 +122,63 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1238px) {
   .maindisp {
-    height: 30vh;
-    width: 100%;
+    height: 50vh;
+  }
+  .maindisptext {
+    height: 20vh;
+    align-items: center;
+  }
+}
+
+@media (max-width: 1300px) {
+  .boxfont1 {
+    font-size: 25px;
+  }
+  .boxfont2 {
+    font-size: 15px;
+  }
+  .boxdata1 {
+    width: 17vh;
+  }
+}
+
+@media (max-width: 950px) {
+  .boxfont1 {
+    font-size: 20px;
+  }
+  .boxfont2 {
+    font-size: 15px;
+  }
+  .boxdata1 {
+    width: 15vh;
+    margin-left: 1vh;
+  }
+  .boxdata {
+    width: 25vh;
+    margin-left: 1vh;
+  }
+}
+
+@media (max-width: 800px) {
+  .boxmain {
+    flex-direction: column;
+    height: 100vh;
+  }
+  .boxdata1 {
+    width: 25vh;
+    margin-left: 5px;
+  }
+  .boxdata {
+    width: 25vh;
+    margin-left: 5px;
+  }
+}
+
+@media (max-width: 1081px) {
+  .maindisp {
+    height: 50vh;
   }
   .maindisptext {
     height: 20vh;
@@ -89,6 +190,17 @@
   .maindisp {
     height: 20vh;
     width: 100%;
+  }
+  .automateslider {
+    width: 300px;
+  }
+
+  .automateslider1 {
+    width: 300px;
+  }
+
+  .automatesliderimg {
+    width: 300px;
   }
   .maindisptext {
     height: 15vh;
@@ -108,5 +220,19 @@
 @media (max-width: 500px) {
   .maindisptext {
     padding: 3px;
+  }
+  .automateslider {
+    width: 220px;
+  }
+
+  .automateslider1 {
+    width: 220px;
+  }
+  .sliders {
+    padding: 1vh;
+  }
+
+  .automatesliderimg {
+    width: 220px;
   }
 }
