--- a/src/pages/Estimation & Management/EstimationManagementProject.module.css
+++ b/src/pages/Estimation & Management/EstimationManagementProject.module.css
@@ -69,7 +69,6 @@
   width: 100%;
   height: 50vh;
   background: #191d19 0% 0% no-repeat padding-box;
-  overflow-y: hidden;
 }
 
 .box2 {
@@ -92,7 +91,7 @@
 }
 .boxdata {
   margin-left: 2vh;
-  width: 30vh;
+  width: 40vh;
 }
 
 .boxdata1 {
@@ -100,10 +99,10 @@
   width: 20vh;
 }
 .boxfont1 {
-  font-size: 30px;
+  font-size: 28px;
 }
 .boxfont2 {
-  font-size: 20px;
+  font-size: 18px;
 }
 @media (max-width: 1550px) {
   .maindisp {
@@ -162,17 +161,41 @@
 }
 
 @media (max-width: 800px) {
+  .box4 {
+    margin: 0;
+  }
+
   .boxmain {
     flex-direction: column;
-    height: 100vh;
+    height: 92vh;
+    padding: 10px 0 10px;
+  }
+  .box2 {
+  }
+
+  .box3 {
+    padding: 10px;
   }
   .boxdata1 {
-    width: 25vh;
-    margin-left: 5px;
+    margin-left: 3vh;
+  }
+  .boxdata {
+    margin-left: 3vh;
+  }
+}
+
+@media (max-width: 1120px) {
+  .boxfont1 {
+    font-size: 20px;
+  }
+  .boxfont2 {
+    font-size: 13px;
+  }
+  .boxdata1 {
+    width: 15vh;
   }
   .boxdata {
     width: 25vh;
-    margin-left: 5px;
   }
 }
 
