--- a/src/components/Contractor & Consultancy/Navbar/Navbar.module.css
+++ b/src/components/Contractor & Consultancy/Navbar/Navbar.module.css
@@ -3,10 +3,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 15px;
 }
 
 .logo {
-  width: 25%;
+  width: 20%;
   text-align: center;
 }
 
@@ -18,21 +19,102 @@
   flex: 1;
 }
 
-.navBox .companyName {
+.companyName {
+  font-size: 20px;
+  font-weight: bolder;
   text-align: center;
-  font-size: 15px;
+}
+
+.navLinks {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+
+.navLink {
+  text-decoration: none;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.navLink:hover {
+  color: brown;
 }
 
 .mobileNav {
-  width: 25%;
+  width: 20%;
+}
+
+.navButton {
+  display: none;
 }
 
 /* Laptop */
 @media only screen and (max-width: 992px) {
+  .logo {
+    width: 10%;
+  }
+
+  .logo img {
+    width: 75px;
+  }
+
+  .companyName {
+    display: none;
+  }
+
+  .navLinks {
+    padding: 5px;
+  }
+
+  .mobileNav {
+    width: 10%;
+  }
 }
 
 /* Tablet */
 @media only screen and (max-width: 768px) {
+  .navLinks {
+    display: none;
+  }
+
+  .navButton {
+    display: block;
+    font-size: 25px;
+  }
+
+  .overlay {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    color: white;
+    overflow-x: hidden;
+  }
+
+  .cross {
+    font-size: 30px;
+    margin: 30px 0 0 35px;
+  }
+
+  .overlayLinks {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .overlayNavLink {
+    padding: 10px;
+    color: white;
+    font-size: 30px;
+    text-decoration: none;
+  }
 }
 
 /* Mobile */
