--- a/src/components/Contractor & Consultancy/Cards/ServicesCardRight.module.css
+++ b/src/components/Contractor & Consultancy/Cards/ServicesCardRight.module.css
@@ -43,16 +43,57 @@
 }
 
 .child2text a{
-    padding:6px 15px;font-size:15px;color:#FFFFFF;text-decoration:none;border-radius:4px;background:linear-gradient(to bottom right, #FBCD38,#FCBB5B);
+    padding:6px 15px;
+    font-size:15px;
+    color:#FFFFFF;
+    text-decoration:none;
+    border-radius:4px;
+    background:linear-gradient(to bottom right, #FBCD38,#FCBB5B);
 }
 /* Laptop */
 @media only screen and (max-width: 992px) {
+    .child2text h1{
+        font-size:25px;
+    }
+    .child2text p{
+        font-size:12px;
+    }
+    
+    .child2text a{
+        font-size:12px;
+        padding:5px 12px;
+    }
 }
 
 /* Tablet */
 @media only screen and (max-width: 768px) {
+
+    .child2text h1{
+        font-size:22px;
+    }
+    .child2text p{
+        font-size:11px;
+        margin-bottom: 1px;
+    }
+    
+    .child2text a{
+        font-size:11px;
+        padding:5px 12px;
+    }
 }
 
 /* Mobile */
 @media only screen and (max-width: 600px) {
+    .child2text h1{
+        font-size:12px;
+    }
+    .child2text p{
+        font-size:8px;
+        margin-bottom: 1px;
+    }
+
+    .child2text a{
+        font-size:8px;
+        padding:3px 12px;
+    }
 }
