--- a/src/components/Contractor & Consultancy/Loader/Loader.module.css
+++ b/src/components/Contractor & Consultancy/Loader/Loader.module.css
@@ -1,8 +1,11 @@
 .screen {
+  position: fixed;
+  width: 100%;
   display: flex;
   height: 100vh;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 @keyframes arrows {
@@ -22,22 +25,22 @@
   animation: arrows 1s var(--delay) infinite ease-in;
 }
 
-.screen span1 {
+.screen .span1 {
   --delay: 0.1s;
   animation: arrows 1s var(--delay) infinite ease-in;
 }
 
-.screen span2 {
+.screen .span2 {
   --delay: 0.3s;
   animation: arrows 1s var(--delay) infinite ease-in;
 }
 
-.screen span3 {
+.screen .span3 {
   --delay: 0.4s;
   animation: arrows 1s var(--delay) infinite ease-in;
 }
 
-.screen span4 {
+.screen .span4 {
   --delay: 0.5s;
   animation: arrows 1s var(--delay) infinite ease-in;
 }
