--- a/src/components/Contractor & Consultancy/Cards/ServicesCardLeft.module.css
+++ b/src/components/Contractor & Consultancy/Cards/ServicesCardLeft.module.css
@@ -43,7 +43,7 @@
     font-size:15px;
 }
 
-.child2text a{
+.btn{
     padding:6px 15px;
     font-size:15px;
     color:#FFFFFF;
@@ -60,7 +60,7 @@
         font-size:12px;
     }
     
-    .child2text a{
+    .btn{
         font-size:12px;
         padding:5px 12px;
     }
@@ -77,7 +77,7 @@
         margin-bottom: 1px;
     }
     
-    .child2text a{
+    .btn{
         font-size:11px;
         padding:5px 12px;
     }
@@ -86,15 +86,15 @@
 /* Mobile */
 @media only screen and (max-width: 600px) {
     .child2text h1{
-        font-size:12px;
+        font-size:15px;
     }
     .child2text p{
-        font-size:8px;
+        font-size:11px;
         margin-bottom: 1px;
     }
     
-    .child2text a{
-        font-size:8px;
+    .btn{
+        font-size:11px;
         padding:3px 12px;
     }
 }
