--- a/src/components/Contractor & Consultancy/Cards/OffersCard.module.css
+++ b/src/components/Contractor & Consultancy/Cards/OffersCard.module.css
@@ -1,24 +1,24 @@
 .parent{
     display:flex;
     flex-direction:column;
-    width:280px;
-    height:300px;
+    width:260px;
+    height:320px;
 }
 
 .parent div{
     position:relative;
-    width: 280px; 
-    height: 270px;
+    width: 260px; 
+    height: 290px;
     border-radius: 7px; 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; 
 }
 
-.parent a{
+.btn{
     margin-left:30px;
-    margin-top:245px;
-    width:220px;
+    margin-top:265px;
+    width:200px;
     padding:13px 0;
     position:absolute;
     text-align:center;
@@ -33,54 +33,44 @@
 /* Laptop */
 @media only screen and (max-width: 992px) {
     .parent{
-        width:260px;
+        width:200px;
         height:300px;
     }
     
     .parent div{
-        width: 260px; 
-        height: 270px;
+        width: 200px; 
+        height: 265px;
     }
     
-    .parent a{
-        width:200px;
+    .btn{   
+        margin-left:20px;
+        width:160px;
         padding:13px 0;
+        margin-top:235px;
     } 
 }
 
 /* Tablet */
 @media only screen and (max-width: 768px) {
     .parent{
-        width:240px;
-        height:280px;
+        width:155px;
+        height:300px;
     }
     
     .parent div{
-        width: 240px; 
-        height: 260px;
+        width: 155px; 
+        height: 265px;
     }
     
-    .parent a{
-        margin-top:235px;
-        width:180px;
+    .btn{
+        
+        margin-left:7px;
+        width:140px;
         padding:13px 0;
-
     } 
 }
 
 /* Mobile */
 @media only screen and (max-width: 600px) {
-    .parent{
-        width:210px;
-    }
-    
-    .parent div{
-        width: 210px; 
-    }
-    
-    .parent a{
-        width:150px;
-        padding:13px 0;
 
-    } 
 }
