--- a/src/components/Contractor & Consultancy/Cards/Brochures/BrochureCard.module.css
+++ b/src/components/Contractor & Consultancy/Cards/Brochures/BrochureCard.module.css
@@ -6,3 +6,24 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media only screen and (max-width: 992px) {
+  .btn {
+    width: 200px;
+  }
+}
+
+/* Tablet */
+@media only screen and (max-width: 768px) {
+  .btn {
+    width: 160px;
+  }
+}
+
+/* Mobile */
+@media only screen and (max-width: 600px) {
+  .btn {
+    width: 220px;
+    height: 270px;
+  }
+}
