--- a/src/components/Contractor & Consultancy/Cards/Brochures/Modal/Modal.module.css
+++ b/src/components/Contractor & Consultancy/Cards/Brochures/Modal/Modal.module.css
@@ -32,6 +32,7 @@
   margin: 0;
   top: 10px;
   right: 10px;
+  font-size: 3vh;
 }
 
 @keyframes fadeInDown {
@@ -43,4 +44,15 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+@media only screen and (max-width: 992px) {
+}
+
+/* Tablet */
+@media only screen and (max-width: 768px) {
+}
+
+/* Mobile */
+@media only screen and (max-width: 600px) {
 }
