--- a/src/components/Contractor & Consultancy/Cards/LeftSideText.module.css
+++ b/src/components/Contractor & Consultancy/Cards/LeftSideText.module.css
@@ -86,9 +86,12 @@
 }
 
 @media (max-width: 788px) {
+  .parent {
+    position: relative;
+  }
   .child {
     position: absolute;
-    width: 80%;
+    width: 100%;
     max-height: auto;
     padding: 5vh;
   }
