--- a/src/components/Contractor & Consultancy/Cards/OffersCardMoreWidth.module.css
+++ b/src/components/Contractor & Consultancy/Cards/OffersCardMoreWidth.module.css
@@ -1,92 +1,90 @@
-.parent{
-    display:flex;
-    flex-direction:column;
-    width:450px;
-    height:320px;
+.parent {
+  display: flex;
+  flex-direction: column;
+  width: 380px;
+  height: 320px;
 }
 
-.parent div{
-    position:relative;
-    width: 450px; 
-    height: 290px;
-    border-radius: 7px; 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover; 
+.parent div {
+  position: relative;
+  width: 380px;
+  height: 290px;
+  border-radius: 7px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.btn{
-    margin-left:125px;
-    margin-top:265px;
-    width:200px;
-    padding:13px 0;
-    position:absolute;
-    text-align:center;
-    font-size:auto;
-    color:#FFFFFF;
-    text-decoration:none;
-    box-shadow: 0px 3px 6px #00000040;
-    border-radius: 15px;
-    background:linear-gradient(to bottom right, #FBCD38,#FCBB5B);
+.btn {
+  margin-left: 90px;
+  margin-top: 265px;
+  width: 200px;
+  padding: 13px 0;
+  position: absolute;
+  text-align: center;
+  font-size: auto;
+  color: #ffffff;
+  text-decoration: none;
+  box-shadow: 0px 3px 6px #00000040;
+  border-radius: 15px;
+  background: linear-gradient(to bottom right, #fbcd38, #fcbb5b);
 }
 
 /* Laptop */
 @media only screen and (max-width: 992px) {
-    .parent{
-        width:300px;
-        height:300px;
-    }
-    
-    .parent div{
-        width: 300px; 
-        height: 265px;
-    }
-    
-    .btn{   
-        margin-left:70px;
-        width:160px;
-        padding:13px 0;
-        margin-top:235px;
-    } 
+  .parent {
+    width: 300px;
+    height: 300px;
+  }
+
+  .parent div {
+    width: 300px;
+    height: 265px;
+  }
+
+  .btn {
+    margin-left: 70px;
+    width: 160px;
+    padding: 13px 0;
+    margin-top: 235px;
+  }
 }
 
 /* Tablet */
 @media only screen and (max-width: 768px) {
-    .parent{
-        width:220px;
-        height:300px;
-    }
-    
-    .parent div{
-        width: 220px; 
-        height: 265px;
-    }
-    
-    .btn{
-        
-        margin-left:40px;
-        width:140px;
-        padding:13px 0;
-    } 
+  .parent {
+    width: 220px;
+    height: 300px;
+  }
+
+  .parent div {
+    width: 220px;
+    height: 265px;
+  }
+
+  .btn {
+    margin-left: 40px;
+    width: 140px;
+    padding: 13px 0;
+  }
 }
 
 /* Mobile */
 @media only screen and (max-width: 600px) {
-    .parent{
-        width:200px;
-        height:240px;
-    }
-    
-    .parent div{
-        width: 200px; 
-        height: 205px;
-    }
-    
-    .btn{
-        
-        margin-left:30px;
-        margin-top: 185px;
-        width:140px;
-        padding:5px 0;
-    } 
+  .parent {
+    width: 200px;
+    height: 240px;
+  }
+
+  .parent div {
+    width: 200px;
+    height: 205px;
+  }
+
+  .btn {
+    margin-left: 30px;
+    margin-top: 185px;
+    width: 140px;
+    padding: 5px 0;
+  }
 }
