--- a/src/components/Contractor & Consultancy/Cards/RightSideText.module.css
+++ b/src/components/Contractor & Consultancy/Cards/RightSideText.module.css
@@ -1,150 +1,144 @@
-.parent{
-    opacity:1;
-    display:flex;
-    flex-direction:row;
-    justify-content:space-between;
-    background:#FFFFFF 0% 0% no-repeat padding-box;
-    height:auto;
-    width: 100%;
+.parent {
+  opacity: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  height: auto;
+  width: 100%;
 }
 
-.imgbox{
-    display:block;
-    text-align:left;
-    max-width:50%;
+.imgbox {
+  display: block;
+  text-align: left;
+  max-width: 50%;
 }
 
-.imgboximg{
-    max-height: auto;
-    max-width: 100%;
+.imgboximg {
+  max-height: auto;
+  max-width: 100%;
 }
 
-.child{
-    padding:10vh;
-    align-self:center;
-    text-align:justify;
-    width:50%;
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
+.child {
+  padding: 10vh;
+  align-self: center;
+  text-align: justify;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.childh1{
-    padding:2vh 0;
-    font: normal normal bold 40px/50px Calibri;
-    color: #3B393C;
-    text-align: center;
+.childh1 {
+  padding: 2vh 0;
+  font: normal normal bold 40px/50px Calibri;
+  color: #3b393c;
+  text-align: center;
 }
 
-.childp{
-    font: normal normal bold 20px/25px Calibri;
-    color: #545151;
+.childp {
+  font: normal normal bold 20px/25px Calibri;
+  color: #545151;
 }
 
-@media(max-width: 1821px){
-    .child{
-        padding: 10vh;
-    }
+@media (max-width: 1821px) {
+  .child {
+    padding: 10vh;
+  }
 }
-@media(max-width: 1357px){
-    .child{
-        padding: 5vh;
-    }
+@media (max-width: 1357px) {
+  .child {
+    padding: 5vh;
+  }
 }
-@media(max-width: 1085px){
-  
-.childh1{
-    padding:1vh 0;
+@media (max-width: 1085px) {
+  .childh1 {
+    padding: 1vh 0;
     font: normal normal bold 30px/40px Calibri;
-    color: #3B393C;
-}
+    color: #3b393c;
+  }
 
-.childp{
+  .childp {
     font: normal normal bold 20px/25px Calibri;
     color: #545151;
-}
-}
-
-@media(max-width: 1085px){
-  
-    .childh1{
-        padding:1vh 0;
-        font: normal normal bold 30px/35px Calibri;
-    }
-    
-    .childp{
-        font: normal normal bold 17px/22px Calibri;
-    }
-}
-
-@media(max-width: 909px){
-  
-    .childh1{
-        padding:0.5vh 0;
-        font: normal normal bold 30px/35px Calibri;
-    }
-    .child{
-        padding: 3vh;
-    }
-}
-
-@media(max-width: 788px){
-  .child{
-      position: absolute;
-      width: 80%;
-      max-height:auto;
-        padding: 5vh;
-
-  }
-  .childh1
-  {
-color:white;
-  }
-  .childp{
-color:white;
-  }
-  .imgbox{
-      max-width: 100%;
-  }
-  .imgboximg{
-      opacity: 1;
-
-      
   }
 }
 
-@media(max-width: 700px){
-    .child{
-        padding:10vh;
-    }
+@media (max-width: 1085px) {
+  .childh1 {
+    padding: 1vh 0;
+    font: normal normal bold 30px/35px Calibri;
+  }
+
+  .childp {
+    font: normal normal bold 17px/22px Calibri;
+  }
 }
 
-@media(max-width: 570px){
-    .child{
-        padding:5vh;
-    }
+@media (max-width: 909px) {
+  .childh1 {
+    padding: 0.5vh 0;
+    font: normal normal bold 30px/35px Calibri;
+  }
+  .child {
+    padding: 3vh;
+  }
 }
 
-@media(max-width: 434px){
-  
-    .childh1{
-        padding:1vh 0;
-        font: normal normal bold 22px/25px Calibri;
-    }
-    
-    .childp{
-        font: normal normal bold 12px/15px Calibri;
-    }
+@media (max-width: 788px) {
+  .parent {
+    position: relative;
+  }
+  .child {
+    position: absolute;
+    width: 100%;
+    max-height: auto;
+    padding: 5vh;
+  }
+  .childh1 {
+    color: white;
+  }
+  .childp {
+    color: white;
+  }
+  .imgbox {
+    max-width: 100%;
+  }
+  .imgboximg {
+    opacity: 1;
+  }
 }
 
-@media(max-width: 280px){
-  
-    .childh1{
-        padding:1vh 0;
-        font: normal normal bold 18px/22px Calibri;
-    }
-    
-    .childp{
-        font: normal normal bold 10px/12px Calibri;
-    }
+@media (max-width: 700px) {
+  .child {
+    padding: 10vh;
+  }
+}
+
+@media (max-width: 570px) {
+  .child {
+    padding: 5vh;
+  }
+}
+
+@media (max-width: 434px) {
+  .childh1 {
+    padding: 1vh 0;
+    font: normal normal bold 22px/25px Calibri;
+  }
+
+  .childp {
+    font: normal normal bold 12px/15px Calibri;
+  }
+}
+
+@media (max-width: 280px) {
+  .childh1 {
+    padding: 1vh 0;
+    font: normal normal bold 18px/22px Calibri;
+  }
+
+  .childp {
+    font: normal normal bold 10px/12px Calibri;
+  }
 }
