--- a/src/components/Contractor & Consultancy/Cards/Brochures/Modal/Modal.module.css
+++ b/src/components/Contractor & Consultancy/Cards/Brochures/Modal/Modal.module.css
@@ -17,11 +17,12 @@
   background: white;
   border-radius: 5px;
   display: flex;
+  background-position: center;
   align-items: center;
   justify-content: center;
-  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+
   position: relative;
   animation: fadeInDown 0.8s;
 }
